# ludum-dare-40

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ludum-dare-setup-notes.txt
game/assets/hero/Hero Punching/: desktop.ini
game/src/: build-osx.sh  build-web.bat  build-win32-vscode.bat  build-win32.bat  collision.c  entity.h  gamestate.h  hashset.h  item.h  levelgen.c  main.c  main.h  move-assets.bat  vector2i.h
threejs-alt/src/: example.json  index.html  main.js
